Added authorization to frontend, added login feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,12 +18,12 @@
 
 <footer>
   <div id="footer" class="mat-large">
-    <a routerLink="/zipcode" style="color: white;"> Zipcodes </a>
-    <a routerLink="/census" style="color: white;"> Census </a>
-    <a routerLink="/housing" style="color: white;"> Housing </a>
-    <a routerLink="/weather" style="color: white;"> Weather </a>
-    <a routerLink="/incentives"  style="color: white;"> Incentives </a>
-    <a routerLink="/user" style="color: white;"> Users </a>
+    <a routerLink="/zipcode" style="color: lightgray;"> Zipcodes </a>
+    <a routerLink="/census" style="color: lightgray;"> Census </a>
+    <a routerLink="/housing" style="color: lightgray;"> Housing </a>
+    <a routerLink="/weather" style="color: lightgray;"> Weather </a>
+    <a routerLink="/incentives"  style="color: lightgray;"> Incentives </a>
+    <a routerLink="/user" style="color: lightgray;"> Users </a>
     <br>CS411 - Relocation Finder (2020)
   </div>
 </footer>
