--- a/src/app/components/zipcodes/zipcode-list/zipcode-list.component.html
+++ b/src/app/components/zipcodes/zipcode-list/zipcode-list.component.html
@@ -1,30 +1,32 @@
-<mat-card style="text-align: center;">
-    <h2>Zip Codes</h2>
-</mat-card>
-
-<table class="styled-table">
-    <thead>
-        <tr>
-            <th>zipcode</th>
-            <th>city</th>
-            <th>state</th>
-	        <th>county</th>
-            <th>time zone</th>
-            <th>latitude</th>
-            <th>longitude</th>
-            <th>population</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let zipcode of zipcodes">
-            <td>{{zipcode.zip}}</td>
-            <td>{{zipcode.primary_city}}</td>
-            <td>{{zipcode.state}}</td>
-            <td>{{zipcode.county}}</td>
-            <td>{{zipcode.timezone}}</td>
-            <td>{{zipcode.latitude}}</td>
-            <td>{{zipcode.longitude}}</td>
-            <td>{{zipcode.irs_estimated_population_2015}}</td>
-        </tr>
-    </tbody>
-</table>
+<div style="margin-top: 80px;">
+    <mat-card style="text-align: center;">
+        <h2>Zip Codes</h2>
+    </mat-card>
+    
+    <table class="styled-table">
+        <thead>
+            <tr>
+                <th>zipcode</th>
+                <th>city</th>
+                <th>state</th>
+                <th>county</th>
+                <th>time zone</th>
+                <th>latitude</th>
+                <th>longitude</th>
+                <th>population</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let zipcode of zipcodes">
+                <td>{{zipcode.zip}}</td>
+                <td>{{zipcode.primary_city}}</td>
+                <td>{{zipcode.state}}</td>
+                <td>{{zipcode.county}}</td>
+                <td>{{zipcode.timezone}}</td>
+                <td>{{zipcode.latitude}}</td>
+                <td>{{zipcode.longitude}}</td>
+                <td>{{zipcode.irs_estimated_population_2015}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
