--- a/src/app/components/user-information/user-information-create/user-information-create.component.css
+++ b/src/app/components/user-information/user-information-create/user-information-create.component.css
@@ -13,7 +13,7 @@
   }
 
   .bg {
-    /* background-image: url("../../../../assets/images/pexels-elia-clerici-912110.jpg"); */
+    background-image: url("../../../../assets/images/pexels-tomáš-malík-2581922.jpg");
   
     background-color: gray;
 
