--- a/src/app/components/authentication/login/login.component.html
+++ b/src/app/components/authentication/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="bg"></div>
 <div class="bg-overlay">
     <div style="text-align: center; align-items: center;"> 
-        <mat-card style="width: 400px; margin: 0 auto; background-color: rgba(255, 255, 255, 0.938);">
+        <mat-card style="width: 80%; margin: 0 auto; background-color: rgba(255, 255, 255, 0.938);">
     
             <div style="text-align: center;">
                 <h1>Signup to create free account</h1>
