--- a/src/app/components/user-information/user-information-list/user-information-list.component.html
+++ b/src/app/components/user-information/user-information-list/user-information-list.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 80px;">
+<div style="margin-top: 80px; margin-left: 10px; margin-right: 10px;">
   <table class="styled-table">
     <thead>
         <tr>
