Changes to login, signup and user info

--- a/src/app/components/authentication/login/login.component.html
+++ b/src/app/components/authentication/login/login.component.html
@@ -62,7 +62,7 @@
                 (click)="onGuestClick()"
                 >Contiue as Guest
             </button>
-            <br>{{ user.email }}
+            <!-- <br>{{ user.email }} -->
         </mat-card>
     </div>
 </div>
