--- a/src/app/components/user-information/user-information-create/user-information-create.component.html
+++ b/src/app/components/user-information/user-information-create/user-information-create.component.html
@@ -9,7 +9,7 @@
   
         <mat-form-field class="example-full-width">
           <mat-label>Email</mat-label>
-          <input matInput name="email" ngModel required>
+          <input matInput name="email" disabled [(ngModel)]="email" required>
         </mat-form-field>
   
         <mat-form-field class="example-full-width">
