--- a/src/app/components/results/results-map/results-map.component.html
+++ b/src/app/components/results/results-map/results-map.component.html
@@ -1,7 +1,24 @@
-<p>results-map works!</p>
 
 <div class="my-google-map">
-  <google-map></google-map>
+  <google-map
+     [zoom]="zoom"
+     [center]="center"
+     [options]="options" 
+  >
+	<map-marker
+	    #someMarker="mapMarker"
+	    *ngFor="let marker of markers"
+	    [position]="marker.position"
+	    [title]="marker.title"
+	    [options]="marker.options"
+	    [info]="marker.info"
+	    (mapClick)="openInfo(somemarker, marker.info)"
+	>
+	
+	</map-marker>
+  
+	<map-info-window>{{ infoContent }}</map-info-window>	
+  </google-map>
 </div>
 
 
