fix issue with map

--- a/src/app/components/results/results-map/results-map.component.html
+++ b/src/app/components/results/results-map/results-map.component.html
@@ -12,7 +12,7 @@
 	    [title]="marker.title"
 	    [options]="marker.options"
 	    [info]="marker.info"
-	    (mapClick)="openInfo(somemarker, marker.info)"
+	    (mapClick)="openInfo(someMarker, marker.info)"
 	>
 	
 	</map-marker>
