Added results model for results data, changes to preference form and rework results page

--- a/src/app/components/preference-form/preference-form.component.html
+++ b/src/app/components/preference-form/preference-form.component.html
@@ -3,14 +3,11 @@
     <h2>Preference Form</h2>
   </mat-card>
   
-  <mat-card style="padding: 5%; width: 50%; margin-left: 25%;">
-    <form class="example-form" (submit)="onSubmitPrefer(preferForm)" #preferForm="ngForm">    
-      
-      <!-- E-mail, FirstName, LastName, City, State, 
-        PreferredMaxDistanceFromCurrentHome, PreferredCostOfLivingMax, 
-        PreferredMinTemperature, PreferredMaxTemperature -->
-        
-      <h4 style="margin-bottom: 8px;">Cost</h4>
+  <mat-card style="padding-left: 4%; padding-right: 4%; width: 50%; margin-left: 25%;">
+    
+    <form class="example-form" (submit)="onSubmitPrefer(preferForm)" #preferForm="ngForm"> 
+
+      <h3 style="margin-bottom: 8px;">Cost</h3>
       <div style="display: flex; margin-bottom: 20px;">
         <mat-form-field class="example-full-width">
           <mat-label>Minimum Cost of Living</mat-label>
@@ -35,9 +32,9 @@
             required
             >
         </mat-form-field>
-      </div>
+      </div> 
   
-      <h4>Number of Bedrooms</h4>
+      <h3>Number of Bedrooms</h3>
       <div style="display: flex; margin-bottom: 40px;">
         <mat-checkbox style="margin-right: 20px" name="checkbox1" ngModel>1</mat-checkbox>
         <mat-checkbox style="margin-right: 20px" name="checkbox2" ngModel>2</mat-checkbox>
@@ -46,10 +43,10 @@
         <mat-checkbox style="margin-right: 20px" name="checkbox5" ngModel>5+</mat-checkbox>
         <mat-checkbox name="checkbox6" ngModel>Single Family</mat-checkbox>
       </div>
-      
-      <h4>Region</h4>
-      <div style="display: flex; margin-bottom: 1px;">
-        <mat-form-field appearance="fill">
+
+      <h3>Region</h3>
+      <div style="display: flex; margin-bottom: 8px;">
+        <mat-form-field>
           <mat-label>Zip Code</mat-label>
           <input 
             matInput 
@@ -61,6 +58,7 @@
             >
         </mat-form-field>
       </div>
+
       <mat-label>Max Distance (miles)</mat-label>
       <div style="display: flex; margin-bottom: 30px;">
         <p>1</p>
@@ -85,7 +83,7 @@
           >
       </div>
 
-      <h4 style="margin-bottom: 8px;">Climate</h4>
+      <h3 style="margin-bottom: 8px;">Climate</h3>
       <div style="display: flex; margin-bottom: 20px;">
         <mat-form-field class="example-full-width">
           <mat-label>Minimum Temperature</mat-label>
@@ -110,13 +108,13 @@
         </mat-form-field>
       </div>
   
-      <button mat-raised-button type="submit" color="primary" style="margin-left: 30%; width: 40%;">Submit</button>
+      <button mat-raised-button type="submit" color="primary" style="margin-left: 30%; width: 40%; margin-top: 5px; margin-bottom: 15px;">Submit</button>
   
     </form>
   </mat-card>
   
   <!-- TEMP to show results -->
-  <mat-card style="margin-top: 15px;">
+  <!-- <mat-card style="margin-top: 15px;">
     <div>
       <h2 style="margin-top: 5px;">Results</h2>
       (only top 100)
@@ -155,5 +153,5 @@
           </tr>
       </tbody>
     </table>
-  </mat-card>
+  </mat-card> -->
 </div>
