--- a/src/app/components/results/results-map/results-map.component.html
+++ b/src/app/components/results/results-map/results-map.component.html
@@ -1,7 +1,4 @@
-<p>results-map works!</p>
 
 <div class="my-google-map">
-  <google-map></google-map>
+  <google-map width="100%"></google-map>
 </div>
-
-
