--- a/src/app/components/preference-form/preference-form.component.html
+++ b/src/app/components/preference-form/preference-form.component.html
@@ -3,114 +3,119 @@
     <h2>Preference Form</h2>
   </mat-card>
   
-  <mat-card style="padding-left: 4%; padding-right: 4%; width: 50%; margin-left: 25%;">
+  <mat-card style="width: 50%; margin-left: 25%; margin-top: 20px;">
+    <div style="margin: 10px;">
+      <form (submit)="onSubmitPrefer(preferForm)" #preferForm="ngForm"> 
+
+        <h3>Cost</h3>
+        <p>Cost of Living</p>
+        <div style="display: flex; margin-bottom: 20px;">
+          <mat-form-field class="example-full-width">
+            <mat-label>Minimum</mat-label>
+            <input 
+              matInput 
+              type="number" 
+              name="minCost" 
+              #minCost
+              ngModel
+              required
+              >
+          </mat-form-field>
     
-    <form class="example-form" (submit)="onSubmitPrefer(preferForm)" #preferForm="ngForm"> 
+          <mat-form-field class="example-full-width" style="margin-left: 5%;">
+            <mat-label>Maximum</mat-label>
+            <input 
+              matInput 
+              type="number" 
+              name="maxCost"
+              #maxCost
+              ngModel
+              required
+              >
+          </mat-form-field>
+        </div> 
 
-      <h3 style="margin-bottom: 8px;">Cost</h3>
-      <div style="display: flex; margin-bottom: 20px;">
-        <mat-form-field class="example-full-width">
-          <mat-label>Minimum Cost of Living</mat-label>
-          <input 
-            matInput 
-            type="number" 
-            name="minCost" 
-            #minCost
-            ngModel
-            required
-            >
-        </mat-form-field>
+
+    
+        <h3>Number of Bedrooms</h3>
+        <div style="display: flex; margin-bottom: 40px;">
+          <mat-checkbox style="margin-right: 20px" name="checkbox1" ngModel>1</mat-checkbox>
+          <mat-checkbox style="margin-right: 20px" name="checkbox2" ngModel>2</mat-checkbox>
+          <mat-checkbox style="margin-right: 20px" name="checkbox3" ngModel>3</mat-checkbox>
+          <mat-checkbox style="margin-right: 20px" name="checkbox4" ngModel>4</mat-checkbox>
+          <mat-checkbox style="margin-right: 20px" name="checkbox5" ngModel>5+</mat-checkbox>
+          <mat-checkbox name="checkbox6" ngModel>Single Family</mat-checkbox>
+        </div>
   
-        <mat-form-field class="example-full-width"  style="margin-left: 5%;">
-          <mat-label>Maximum Cost of Living</mat-label>
-          <input 
-            matInput 
-            type="number" 
-            name="maxCost"
-            #maxCost
-            ngModel
-            required
-            >
-        </mat-form-field>
-      </div> 
+        <h3>Region</h3>
+        <div style="display: flex; margin-bottom: 8px;">
+          <mat-form-field>
+            <mat-label>Zip Code</mat-label>
+            <input 
+              matInput 
+              type="number" 
+              name="zipCode" 
+              #zipCode
+              ngModel
+              optional
+              >
+          </mat-form-field>
+        </div>
   
-      <h3>Number of Bedrooms</h3>
-      <div style="display: flex; margin-bottom: 40px;">
-        <mat-checkbox style="margin-right: 20px" name="checkbox1" ngModel>1</mat-checkbox>
-        <mat-checkbox style="margin-right: 20px" name="checkbox2" ngModel>2</mat-checkbox>
-        <mat-checkbox style="margin-right: 20px" name="checkbox3" ngModel>3</mat-checkbox>
-        <mat-checkbox style="margin-right: 20px" name="checkbox4" ngModel>4</mat-checkbox>
-        <mat-checkbox style="margin-right: 20px" name="checkbox5" ngModel>5+</mat-checkbox>
-        <mat-checkbox name="checkbox6" ngModel>Single Family</mat-checkbox>
-      </div>
-
-      <h3>Region</h3>
-      <div style="display: flex; margin-bottom: 8px;">
-        <mat-form-field>
-          <mat-label>Zip Code</mat-label>
-          <input 
-            matInput 
-            type="number" 
-            name="zipCode" 
-            #zipCode
-            ngModel
-            optional
-            >
-        </mat-form-field>
-      </div>
-
-      <mat-label>Max Distance (miles)</mat-label>
-      <div style="display: flex; margin-bottom: 30px;">
-        <p>1</p>
-        <mat-slider 
-          min="1" 
-          max="6000" 
-          value="200" 
-          class="example-full-width" 
-          #distslider
-          name="maxDist"
-          ngModel
-          optional
-          >
-        </mat-slider>
-        <p>6000</p>
-        
-        <input 
-          matInput 
-          type="number" 
-          value="{{distslider.value}}" 
-          class="slider-output"
-          >
-      </div>
-
-      <h3 style="margin-bottom: 8px;">Climate</h3>
-      <div style="display: flex; margin-bottom: 20px;">
-        <mat-form-field class="example-full-width">
-          <mat-label>Minimum Temperature</mat-label>
-          <input 
-            matInput 
-            type="number" 
-            name="minTemp" 
-            ngModel 
-            optional
-            >
-        </mat-form-field>
-  
-        <mat-form-field class="example-full-width" style="margin-left: 5%;">
-          <mat-label>Maximum Temperature</mat-label>
-          <input 
-            matInput 
-            type="number" 
-            name="maxTemp" 
+        <mat-label>Max Distance (miles)</mat-label>
+        <div style="display: flex; margin-bottom: 30px;">
+          <p>1</p>
+          <mat-slider 
+            min="1" 
+            max="6000" 
+            value="200" 
+            class="example-full-width" 
+            #distslider
+            name="maxDist"
             ngModel
             optional
             >
-        </mat-form-field>
-      </div>
+          </mat-slider>
+          <p>6000</p>
+          
+          <input 
+            matInput 
+            type="number" 
+            value="{{distslider.value}}" 
+            class="slider-output"
+            >
+        </div>
   
-      <button mat-raised-button type="submit" color="primary" style="margin-left: 30%; width: 40%; margin-top: 5px; margin-bottom: 15px;">Submit</button>
-  
-    </form>
+        <h3 style="margin-bottom: 8px;">Climate</h3>
+        <div style="display: flex; margin-bottom: 20px;">
+          <mat-form-field class="example-full-width">
+            <mat-label>Minimum Temp</mat-label>
+            <input 
+              matInput 
+              type="number" 
+              name="minTemp" 
+              ngModel 
+              optional
+              >
+          </mat-form-field>
+    
+          <mat-form-field class="example-full-width" style="margin-left: 5%;">
+            <mat-label>Maximum Temp</mat-label>
+            <input 
+              matInput 
+              type="number" 
+              name="maxTemp" 
+              ngModel
+              optional
+              >
+          </mat-form-field>
+        </div>
+    
+        <button mat-raised-button type="submit" color="primary" style="margin-left: 30%; width: 40%; margin-top: 5px; margin-bottom: 15px;">Submit</button>
+    
+      </form>
+    </div>
+    
   </mat-card>
   
   <!-- TEMP to show results -->
