Temporary changes for userpreference

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,6 +6,7 @@
       <a routerLink="/weather" style="color: lightgray;"> Weather </a>
       <a routerLink="/incentives"  style="color: lightgray;"> Incentives </a>
       <a routerLink="/user" style="color: lightgray;"> Users </a>
+      <a routerLink="/userinfo" style="color: lightgray;"> UserInfo </a>
       <br>CS411 - Relocation Finder (2020)
     </div>
   </footer>
