--- a/src/app/components/prefers/prefers-list/prefers-list.component.html
+++ b/src/app/components/prefers/prefers-list/prefers-list.component.html
@@ -1,4 +1,4 @@
-<table class="styled-table">
+<!-- <table class="styled-table">
     <thead>
         <tr>
             <th>user_id</th>
@@ -12,15 +12,15 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let prefer of prefers">
-            <td>{{prefer.user_id}}</td>
-            <td>{{prefer.city_id}}</td>
-            <td>{{prefer.min_cost_living}}</td>
-            <td>{{prefer.max_cost_living}}</td>
-            <td>{{prefer.bedrooms}}</td>
-            <td>{{prefer.median_age}}</td>
-            <td>{{prefer.min_temp}}</td>
-            <td>{{prefer.max_temp}}</td>
+        <tr *ngFor="let temp of userpreference">
+            <td>{{temp.user_id}}</td>
+            <td>{{temp.city_id}}</td>
+            <td>{{temp.min_cost_living}}</td>
+            <td>{{temp.max_cost_living}}</td>
+            <td>{{temp.bedrooms}}</td>
+            <td>{{temp.median_age}}</td>
+            <td>{{temp.min_temp}}</td>
+            <td>{{temp.max_temp}}</td>
         </tr>
     </tbody>
-</table>
+</table> -->
