Changes to go with api

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,7 +21,7 @@
         </button>
         <mat-menu #menu="matMenu">
         <button mat-menu-item routerLink="/login">Login</button>
-        <button mat-menu-item routerLink="/user-info">User Info</button>
+        <button mat-menu-item routerLink="/userinfo">User Info</button>
         <button mat-menu-item routerLink="/preference">Preference</button>
         <button mat-menu-item routerLink="/results">Results</button>
         </mat-menu>
