--- a/src/app/components/user-information/user-information-create/user-information-create.component.html
+++ b/src/app/components/user-information/user-information-create/user-information-create.component.html
@@ -14,23 +14,23 @@
   
         <mat-form-field class="example-full-width">
           <mat-label>First name</mat-label>
-          <input matInput name="firstname" ngModel required>
+          <input matInput name="firstname" [(ngModel)]="currentUserInfo.firstname" required>
         </mat-form-field>
   
         <mat-form-field class="example-full-width">
           <mat-label>Last Name</mat-label>
-          <input matInput name="lastname" ngModel required>
+          <input matInput name="lastname" [(ngModel)]="currentUserInfo.lastname" required>
         </mat-form-field>
       
         <mat-form-field class="example-full-width">
           <mat-label>City</mat-label>
-          <input matInput placeholder="Ex. San Francisco" name="city" ngModel required>
+          <input matInput placeholder="Ex. San Francisco" name="city" [(ngModel)]="currentUserInfo.city" required>
         </mat-form-field>
   
         <div style="display: flex;">
           <mat-form-field class="example-full-width">
             <mat-label>State</mat-label>
-            <input matInput placeholder="Ex. California" name="state" ngModel required>
+            <input matInput placeholder="Ex. California" name="state" [(ngModel)]="currentUserInfo.state" required>
           </mat-form-field>
   
           <mat-form-field style="margin-left: 5%; width: 120px;">
@@ -41,7 +41,7 @@
               maxlength="5" 
               placeholder="Ex. 94105" 
               name="zipcode" 
-              ngModel 
+              [(ngModel)]="currentUserInfo.zipcode" 
               required
             >
             <mat-hint align="end">{{zipCode.value.length}} / 5</mat-hint>
